--- a/src/index.html
+++ b/src/index.html
@@ -31,18 +31,9 @@
 <![endif]-->
 
 <div>
-  <div class="navbar navbar-default">
-    <a class="btn btn-info btn-lg" ui-sref="library">Library</a>
-    <button class="btn btn-info btn-lg pull-right">Logout</button>
-  </div>
 
-
-  <div class="row" ng-controller="WishlistController">
-    <button class="btn btn-success btn-lg pull-right" ng-click="openWishlist($event)">WishList</button>
-  </div>
 
   <div ui-view></div>
-
 
 
 </div>
@@ -69,6 +60,8 @@
 <script src="../bower_components/moment/moment.js"></script>
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="../bower_components/lodash/lodash.js"></script>
+<script src="../bower_components/ngstorage/ngStorage.js"></script>
+<script src="../bower_components/angular-jwt/dist/angular-jwt.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -78,8 +71,13 @@
 <script src="/src/app/book/BookController.js"></script>
 <script src="/src/app/book/BookDirective.js"></script>
 <script src="/src/app/book/BookService.js"></script>
+<script src="/src/app/commonFiles/AuthenticationService.js"></script>
+<script src="/src/app/commonFiles/interceptorService.js"></script>
+<script src="/src/app/commonFiles/navbarDirective.js"></script>
 <script src="/src/app/library/LibraryController.js"></script>
 <script src="/src/app/library/LibraryService.js"></script>
+<script src="/src/app/login/LoginController.js"></script>
+<script src="/src/app/login/LoginService.js"></script>
 <script src="/src/app/wishlist/WishlistController.js"></script>
 <script src="/src/app/wishlist/WishlistService.js"></script>
 <!-- endinject -->
